src/compiletest/tlcell-12.stderr
error[E0277]: `UnsafeCell<()>` cannot be shared between threads safely
 --> $DIR/tlcell-12.rs:8:5
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ---- required by this bound in `is_sync`
8 |     is_sync::<TLCell<Marker, ()>>(); // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<()>` cannot be shared between threads safely
  |
  = help: within `TLCell<Marker, ()>`, the trait `Sync` is not implemented for `UnsafeCell<()>`
  = note: required because it appears within the type `TLCell<Marker, ()>`

error[E0277]: `*const Marker` cannot be shared between threads safely
 --> $DIR/tlcell-12.rs:8:5
  |
7 |     fn is_sync<T: Sync>() {}
  |                   ---- required by this bound in `is_sync`
8 |     is_sync::<TLCell<Marker, ()>>(); // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const Marker` cannot be shared between threads safely
  |
  = help: within `TLCell<Marker, ()>`, the trait `Sync` is not implemented for `*const Marker`
  = note: required because it appears within the type `PhantomData<*const Marker>`
  = note: required because it appears within the type `TLCell<Marker, ()>`
